--- a/.github/workflows/sonarqube-module-deploy.yaml
+++ b/.github/workflows/sonarqube-module-deploy.yaml
@@ -1,7 +1,7 @@
 name: SonarQube Module Deploy
 
 permissions:
-  content: read
+  contents: read
   id-token: write
 
 on:
@@ -17,11 +17,6 @@ on:
         required: false
         default: 'false'
         type: string
-      # Add other flags as needed (e.g. do_pluginsync)
-    secrets:
-      AWS_ACCESS_KEY_ID: { required: true }
-      AWS_SECRET_ACCESS_KEY: { required: true }
-      AWS_REGION: { required: true }
 
 jobs:
   plan-and-apply:
