--- a/.github/workflows/sonarqube-main.yaml
+++ b/.github/workflows/sonarqube-main.yaml
@@ -1,16 +1,12 @@
 name: SonarQube Main Infra CD
 
 permissions:
-  content: read
+  contents: read
   id-token: write
 
 on:
   push:
     branches: [main]
-  workflow_dispatch:
-
-env:
-  TFVARS_FILE: env/prod.tfvars
 
 jobs:
   detect-changes:
@@ -83,7 +79,7 @@ jobs:
     uses: ./.github/workflows/sonarqube-module-deploy.yaml
     with:
       module: "ecs"
-      tfvars: ${{ env.TFVARS_FILE }}
+      tfvars: 'env/prod.tfvars'
       do_db_migration: ${{ needs.check-version.outputs.do_db_migration }}
 
   deploy-rds:
@@ -92,7 +88,7 @@ jobs:
     uses: ./.github/workflows/sonarqube-module-deploy.yaml
     with:
       module: "rds"
-      tfvars: ${{ env.TFVARS_FILE }}
+      tfvars: 'env/prod.tfvars'
 
   deploy-alb:
     needs: detect-changes
@@ -100,7 +96,7 @@ jobs:
     uses: ./.github/workflows/sonarqube-module-deploy.yaml
     with:
       module: "alb"
-      tfvars: ${{ env.TFVARS_FILE }}
+      tfvars: 'env/prod.tfvars'
 
   deploy-efs:
     needs: detect-changes
@@ -108,7 +104,7 @@ jobs:
     uses: ./.github/workflows/sonarqube-module-deploy.yaml
     with:
       module: "efs-datasync"
-      tfvars: ${{ env.TFVARS_FILE }}
+      tfvars: 'env/prod.tfvars'
 
   deploy-dns:
     needs: detect-changes
@@ -116,4 +112,4 @@ jobs:
     uses: ./.github/workflows/sonarqube-module-deploy.yaml
     with:
       module: "dns"
-      tfvars: ${{ env.TFVARS_FILE }}
+      tfvars: 'env/prod.tfvars'
